client/wfnews-war/src/main/angular/src/styles/_base.scss
/* ... */
.location-option .address{
    font-weight: bold;
}

.search-location {
    border: 1px solid #dddddd;
    border-radius: 5px;
    padding-left: 15px;
    padding-right: 15px;
    min-width: 260px;
    height: 100%;
    border-right: none;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
}
.search-location-close-container{
    border:1px solid #dddddd;
    border-left: none;
    border-radius: 5px;
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
    height: calc(100% + 2px);
    display: flex;
    align-items: center;
    color: #dddddd;
}
.search-location-close-container mat-icon{
    padding-left: 4px;
    padding-right: 4px;

}
.search-location-close{
    border-left: 1px solid #dddddd;
    cursor: pointer;
}

.smk-toolbar {
    box-shadow: none !important;
}

